authentication and courses functionality all are done

--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,18 @@
 PORT = 5000
 MONGO_URI=mongodb://localhost:27017/kukuk-backend
+
+OTP_EXPIRE=5    
+
+
+
+SMTP_HOST=sandbox.smtp.mailtrap.io  # SMTP server host for sending emails
+SMTP_PORT=587           # SMTP server port
+SMTP_USER=4059073a65a914  # SMTP server username
+SMTP_PASS=c7b209bb33a1aa
+         # SMTP server password
+# SMTP_FROM=danyailjaffri7@gmail.com  # Email sender address
+
+JWT_COOKIE_EXPIRE=10       # Expiry time for JWT cookies in days
+
+
+JWT_SECRET = "dhsjf3423jhsdf3423df"
