--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,6 @@
 PORT = 5000
-MONGO_URI=mongodb://localhost:27017/kukuk-backend
+MONGO_URI=mongodb+srv://danyailjaffri7:danyail@cluster0.2xhc8bn.mongodb.net/kukuk-App?retryWrites=true
+# mongodb://localhost:27017/kukuk-backendrs
 
 OTP_EXPIRE=5    
 
