--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
+    "pdfkit": "^0.14.0",
     "validator": "^13.11.0"
   }
 }
