--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "pdfkit": "^0.14.0",
+    "stripe": "^14.18.0",
     "validator": "^13.11.0"
   }
 }
