--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Danyail12/kukuk-backend#readme",
   "dependencies": {
-    "aws-sdk": "^2.1600.0",
+    "@aws-sdk/client-s3": "^3.564.0",
+    "@aws-sdk/util-base64": "^3.374.0",
+    "aws-sdk": "^2.1611.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.3",
@@ -30,11 +32,14 @@
     "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "pdfkit": "^0.14.0",
     "stripe": "^14.21.0",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
 }
